# maven-mcp-server

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.claude/commands/: pom-agent.md
ai_docs/: maven-search.md
specs/: batch-versions-check-spec.md  check-maven-version-exists-spec.md  find-maven-latest-component-version-spec.md  get-maven-all-latest-versions-spec.md  get-maven-latest-version-spec.md  init-maven-check.md  init-mcp-spec.md  latest-by-semver-spec.md
src/maven_mcp_server/: main.py  server.py  utils.py
src/maven_mcp_server/shared/: data_types.py  utils.py
src/maven_mcp_server/tests/shared/: test_utils.py
src/maven_mcp_server/tests/tools/: test_all_latest_versions.py  test_batch_versions.py  test_check_version.py  test_date_versioning.py  test_direct_access.py  test_latest_by_semver.py  test_pom_dependencies.py  test_pom_integration.py  test_version_exist.py
src/maven_mcp_server/tools/: __init__.py  all_latest_versions.py  batch_versions.py  check_version.py  latest_by_semver.py  version_exist.py
